--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
-    "lint": "eslint \"src/**/*.ts*\"",
+    "lint": "eslint src/**/*.ts*",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
     "storybook": "storybook dev -p 6006",
@@ -34,29 +34,29 @@
   },
   "devDependencies": {
     "@builder.io/partytown": "^0.8.1",
-    "@builder.io/qwik": "^1.2.12",
-    "@builder.io/qwik-city": "^1.2.12",
-    "@playwright/test": "^1.38.1",
-    "@storybook/addon-essentials": "^7.4.3",
-    "@storybook/addon-links": "^7.4.3",
-    "@storybook/blocks": "^7.4.3",
-    "@storybook/builder-vite": "^7.4.3",
-    "@storybook/html": "^7.4.3",
-    "@storybook/html-vite": "^7.4.3",
-    "@types/eslint": "^8.44.2",
-    "@types/node": "^20.6.3",
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "@typescript-eslint/parser": "^6.7.2",
-    "@vitest/ui": "^0.34.5",
-    "eslint": "^8.49.0",
-    "eslint-plugin-qwik": "^1.2.12",
+    "@builder.io/qwik": "^1.2.13",
+    "@builder.io/qwik-city": "^1.2.13",
+    "@playwright/test": "^1.39.0",
+    "@storybook/addon-essentials": "^7.5.0",
+    "@storybook/addon-links": "^7.5.0",
+    "@storybook/blocks": "^7.5.0",
+    "@storybook/builder-vite": "^7.5.0",
+    "@storybook/html": "^7.5.0",
+    "@storybook/html-vite": "^7.5.0",
+    "@types/eslint": "^8.44.6",
+    "@types/node": "^20.8.7",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
+    "@vitest/ui": "^0.34.6",
+    "eslint": "^8.51.0",
+    "eslint-plugin-qwik": "^1.2.13",
     "prettier": "^3.0.3",
-    "storybook": "^7.4.3",
+    "storybook": "^7.5.0",
     "storybook-framework-qwik": "^0.2.4",
     "typescript": "^5.2.2",
-    "undici": "^5.25.1",
-    "vite": "^4.4.9",
+    "undici": "^5.26.4",
+    "vite": "^4.5.0",
     "vite-tsconfig-paths": "^4.2.1",
-    "vitest": "^0.34.5"
+    "vitest": "^0.34.6"
   }
 }
