--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,25 +16,22 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - uses: pnpm/action-setup@v3
-      name: Install pnpm
-      id: pnpm-install
-      with:
-        version: latest
-        run_install: |
-          - recursive: false
-            args: [--no-frozen-lockfile]
-
     - name: Use Node.js 20.x
       uses: actions/setup-node@v4.0.2
       with:
         node-version: 20.x
         check-latest: true
 
+    - uses: oven-sh/setup-bun@v1
+
+    - name: Install dependencies
+      run: |
+        bun install
+
     - name: lint
       run: |
-        pnpm lint
+        bun run lint
 
     - name: build
       run: |
-        pnpm build
+        bun run build
