--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
-    "lint": "eslint src/**/*.ts*",
+    "lint": "eslint",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
     "storybook": "storybook dev -p 6006",
@@ -33,30 +33,29 @@
     "lint-fix": "bun run prettier-format && bun run lint --fix"
   },
   "devDependencies": {
-    "@builder.io/partytown": "^0.10.0",
-    "@builder.io/qwik": "^1.5.1",
-    "@builder.io/qwik-city": "^1.5.1",
-    "@playwright/test": "^1.42.1",
-    "@storybook/addon-essentials": "^8.0.0",
-    "@storybook/addon-links": "^8.0.0",
-    "@storybook/blocks": "^8.0.0",
-    "@storybook/builder-vite": "^8.0.0",
-    "@storybook/html": "^8.0.0",
-    "@storybook/html-vite": "^8.0.0",
-    "@types/eslint": "^8.56.5",
-    "@types/node": "^20.11.25",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
-    "@vitest/ui": "^1.3.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-qwik": "^1.5.1",
+    "@builder.io/partytown": "^0.10.1",
+    "@builder.io/qwik": "^1.5.2",
+    "@builder.io/qwik-city": "^1.5.2",
+    "@playwright/test": "^1.43.0",
+    "@storybook/addon-essentials": "^8.0.6",
+    "@storybook/addon-links": "^8.0.6",
+    "@storybook/blocks": "^8.0.6",
+    "@storybook/builder-vite": "^8.0.6",
+    "@storybook/html": "^8.0.6",
+    "@storybook/html-vite": "^8.0.6",
+    "@types/node": "^20.12.7",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.6.0",
+    "@vitest/ui": "^1.4.0",
+    "eslint": "^9.0.0",
+    "eslint-plugin-qwik": "^1.5.2",
     "prettier": "^3.2.5",
-    "storybook": "^8.0.0",
+    "storybook": "^8.0.6",
     "storybook-framework-qwik": "^0.4.0",
-    "typescript": "^5.4.2",
-    "undici": "^6.7.1",
-    "vite": "^5.1.5",
-    "vite-tsconfig-paths": "^4.3.1",
-    "vitest": "^1.3.1"
+    "typescript": "^5.4.4",
+    "undici": "^6.12.0",
+    "vite": "^5.2.8",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^1.4.0"
   }
 }
