--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   },
   "devDependencies": {
     "@builder.io/partytown": "^0.10.2",
-    "@builder.io/qwik": "^1.5.2",
-    "@builder.io/qwik-city": "^1.5.2",
+    "@builder.io/qwik": "^1.5.3",
+    "@builder.io/qwik-city": "^1.5.3",
     "@playwright/test": "^1.43.1",
     "@storybook/addon-essentials": "^8.0.9",
     "@storybook/addon-links": "^8.0.9",
@@ -43,12 +43,12 @@
     "@storybook/builder-vite": "^8.0.9",
     "@storybook/html": "^8.0.9",
     "@storybook/html-vite": "^8.0.9",
-    "@types/node": "^20.12.7",
+    "@types/node": "^20.12.8",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "@vitest/ui": "^1.5.3",
     "eslint": "^9.1.1",
-    "eslint-plugin-qwik": "^1.5.2",
+    "eslint-plugin-qwik": "^1.5.3",
     "prettier": "^3.2.5",
     "storybook": "^8.0.9",
     "storybook-framework-qwik": "^0.4.0",
@@ -57,5 +57,6 @@
     "vite": "^5.2.10",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.5.3"
-  }
+  },
+  "packageManager": "pnpm@9.0.6+sha512.f6d863130973207cb7a336d6b439a242a26ac8068077df530d6a86069419853dc1ffe64029ec594a9c505a3a410d19643c870aba6776330f5cfddcf10a9c1617"
 }
