--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "node": ">=15.0.0"
   },
   "private": true,
+  "type": "module",
   "trustedDependencies": [
     "sharp"
   ],
@@ -53,7 +54,7 @@
     "storybook": "^8.2.8",
     "storybook-framework-qwik": "^0.4.0",
     "typescript": "^5.5.4",
-    "undici": "^6.19.5",
+    "undici": "^6.19.6",
     "vite": "^5.4.0",
     "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.0.5"
